--- a/index.html
+++ b/index.html
@@ -3,8 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <title>Leonardo Brizolla</title>
+
+    <style>
+        body {
+            background: #282a36;
+        }
+    </style>
 </head>
 <body>
-    <h1>Desenvolvendo com Live Server</h1>
+
 </body>
 </html>
