Class 004 - Creating menu structure with HTML

--- a/index.html
+++ b/index.html
@@ -8,9 +8,21 @@
         body {
             background: #282a36;
         }
+        
+        header {
+            background: red;
+        }
+        .links {
+            /* background: gray; */
+        }
     </style>
 </head>
 <body>
-
+    <header>
+        <div class="links">
+            <a href="/">Sobre</a>
+            <a href="/">Aulas</a>
+        </div>
+    </header>
 </body>
 </html>
