Class 005 - Spacing with CSS

--- a/index.html
+++ b/index.html
@@ -10,16 +10,13 @@
         }
         
         header {
-            background: red;
-        }
-        .links {
-            /* background: gray; */
+            padding: 32px;
         }
     </style>
 </head>
 <body>
     <header>
-        <div class="links">
+        <div>
             <a href="/">Sobre</a>
             <a href="/">Aulas</a>
         </div>
