--- a/index.html
+++ b/index.html
@@ -5,12 +5,19 @@
     <title>Leonardo Brizolla</title>
 
     <style>
+        * {
+            margin: 0;
+            padding: 0;
+            border: 0;
+        }
         body {
             background: #282a36;
         }
         
         header {
             padding: 32px;
+            border-bottom: 1px solid #333;
+            background: rgba(0, 0, 0, 0.1);
         }
     </style>
 </head>
