--- a/index.html
+++ b/index.html
@@ -13,11 +13,17 @@
         body {
             background: #282a36;
         }
-        
         header {
             padding: 32px;
             border-bottom: 1px solid #333;
             background: rgba(0, 0, 0, 0.1);
+        }
+        header div {
+            text-align: center;
+        }
+        header div a {
+            color: white;
+            text-decoration: none;
         }
     </style>
 </head>
