--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 <html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
+
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@300;400;700&display=swap" rel="stylesheet">
+
     <title>Leonardo Brizolla</title>
 
     <style>
@@ -12,6 +16,7 @@
         }
         body {
             background: #282a36;
+            font-family: 'Source Sans Pro', sans-serif;
         }
         header {
             padding: 32px;
@@ -23,7 +28,14 @@
         }
         header div a {
             color: white;
+            font-size: 18px;
+            line-height: 28px;
+            margin: 0 16px;
             text-decoration: none;
+        }
+        header div a:hover {
+            color: #50fa7b;
+            transition: color 700ms;
         }
     </style>
 </head>
