Class 009 - Adding images in HTML

--- a/index.html
+++ b/index.html
@@ -46,5 +46,9 @@
             <a href="/">Aulas</a>
         </div>
     </header>
+
+    <div id="wrapper">
+        <img src="https://avatars.githubusercontent.com/u/34755142?v=4" alt="Leonardo Brizolla">
+    </div>
 </body>
 </html>
