Class 011 - Working with text in HTML

--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
 
     <div id="wrapper">
         <img src="https://avatars.githubusercontent.com/u/34755142?v=4" alt="Leonardo Brizolla">
+        <h1>Leonardo Brizolla</h1>
+        <h2>Aluno - <a href="https://rocketseat.com.br/" target="_blank">Rocketseat</a></h2>
+        <p>Programador full-stack, focado na qualidade de desenvolvimento de software</p>
     </div>
 </body>
 </html>
