--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <div>
+        <div class="links">
             <a href="/">Sobre</a>
             <a href="/">Aulas</a>
         </div>
@@ -20,6 +20,12 @@
         <h1>Leonardo Brizolla</h1>
         <h2>Aluno - <a href="https://rocketseat.com.br/" target="_blank">Rocketseat</a></h2>
         <p>Programador full-stack, focado na qualidade de desenvolvimento de software</p>
+    </div>
+
+    <div id="links-footer" class="links">
+        <a href="https://github.com/LeonardoBrizolla/" target="_blank">Github</a>
+        <a href="https://www.linkedin.com/in/leonardo-brizolla/" target="_blank">LinkedIn</a>
+        <a href="https://twitter.com/leobrizaa/" target="_blank">Twitter</a>
     </div>
 </body>
 </html>
