Class 020 - Adding a modal style pop-up window

--- a/classes.html
+++ b/classes.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
 
     <title>Leonardo Brizolla</title>
-
+    
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -112,7 +114,15 @@
     </section>
 
     <div class="modal-overlay">
+        <div class="modal">
+            <a class="close-modal">
+                <i class="material-icons">close</i>
+            </a>
 
+            <div class="modal-content">
+                <!-- Video aqui -->
+            </div>
+        </div>
     </div>
 </body>
 </html>
