--- a/classes.html
+++ b/classes.html
@@ -113,7 +113,7 @@
         </div>
     </section>
 
-    <div class="modal-overlay active">
+    <div class="modal-overlay">
         <div class="modal">
             <a class="close-modal">
                 <i class="material-icons">close</i>
@@ -124,5 +124,8 @@
             </div>
         </div>
     </div>
+
+    <script src="scripts.js"></script>
+
 </body>
 </html>
