Class 023 - Adding external content with iframe

--- a/classes.html
+++ b/classes.html
@@ -121,6 +121,7 @@
 
             <div class="modal-content">
                 <!-- Video aqui -->
+                <iframe src="https://www.youtube.com/embed/DDm0M_rZLJo" frameborder="0"></iframe>
             </div>
         </div>
     </div>
